...
            }
            
            NavigationStack {
                LibraryView()
            }
            .tabItem {
                Label("Library", systemImage: "books.vertical")
            }
            
            NavigationStack {
                SettingsView()
                    .environmentObject(authService)
            }
            .tabItem {
                Label("Settings", systemImage: "gearshape")
            }
            
        }
        .onAppear {
            if !onboardingService.hasCompletedOnboarding {
                showOnboarding = true
...
